# CourseProj

./: CMakeLists.txt  README.md  algorithm.cpp  generator.cpp  graph.cpp  main.cpp  tester.cpp  validator.cpp
headers/: algorithm.h  generator.h  graph.h  structures.h  tester.h  validator.h
